# Handwriting-Recognition-MNIST-C-

./: CMakeCache.txt  CMakeLists.txt  Makefile  build.sh  cmake_install.cmake  mnist.sh  read_dataset_images.sh  read_dataset_labels.sh
libtorch/: build-hash
libtorch/lib/: libc10.dylib  libpytorch_jni.dylib  libshm.dylib
src/: neural_net.hpp  test.cpp  train.cpp
